dont use for compareing!!!